--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:01:31 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:02:14 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -312,8 +312,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
 Not started</td>
-      <td class="greyout">Jon Rahm +7
-Not started</td>
+      <td class="greyout">Jon Rahm +8
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -342,8 +342,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm(W) +7
-Not started</td>
+      <td class="greyout leftborder">Jon Rahm(W) +8
++1 thru 1</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -406,10 +406,10 @@ Not started</td>
 Not started</td>
       <td>Robert MacIntyre +6
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm +7
-Not started</td>
-      <td class="greyout">Patrick Cantlay +8
+      <td class="greyout leftborder">Patrick Cantlay +8
 E thru 2</td>
+      <td class="greyout">Jon Rahm +8
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
@@ -425,22 +425,6 @@ Not started</td>
       <td class="greyout leftborder">Tiger Woods +7
 E thru 1</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler(W) -9
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Will Zalatoris +2
-Not started</td>
-      <td>Jon Rahm +7
-Not started</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -470,10 +454,26 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm(W) +7
-Not started</td>
+      <td class="greyout leftborder">Jon Rahm(W) +8
++1 thru 1</td>
       <td class="greyout">Patrick Cantlay +8
 E thru 2</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler(W) -9
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Will Zalatoris +2
+Not started</td>
+      <td>Jon Rahm +8
++1 thru 1</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -486,25 +486,9 @@ Not started</td>
 Not started</td>
       <td>Talor Gooch +3
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm(W) +7
-Not started</td>
+      <td class="greyout leftborder">Jon Rahm(W) +8
++1 thru 1</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Viktor Hovland +3
-Not started</td>
-      <td>Jon Rahm +7
-Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay(W) +8
-E thru 2</td>
-      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -524,6 +508,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">1</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Viktor Hovland +3
+Not started</td>
+      <td>Patrick Cantlay(W) +8
+E thru 2</td>
+      <td class="greyout leftborder">Jon Rahm +8
++1 thru 1</td>
+      <td class="greyout">Sam Burns
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">1</td>
       <td>Justin Thomas(W) -1
@@ -534,41 +534,25 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm +7
-Not started</td>
+      <td class="greyout leftborder">Jon Rahm +8
++1 thru 1</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td>Jon Rahm +7
-Not started</td>
+      <td>Jon Rahm +8
++1 thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">2</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Viktor Hovland +3
-Not started</td>
-      <td>Jon Rahm(W) +7
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -602,6 +586,22 @@ Not started</td>
 Not started</td>
       <td class="greyout">Tiger Woods(W) +7
 E thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">3</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Rory McIlroy +1
+Not started</td>
+      <td>Viktor Hovland +3
+Not started</td>
+      <td>Jon Rahm(W) +8
++1 thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -653,15 +653,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td>Jon Rahm(W) +7
-Not started</td>
+      <td>Jon Rahm(W) +8
++1 thru 1</td>
       <td class="greyout leftborder">Bubba Watson +8
 E thru 1</td>
       <td class="greyout">Jordan Spieth
@@ -669,34 +669,18 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
-      <td>Jon Rahm(W) +7
-Not started</td>
+      <td>Jon Rahm(W) +8
++1 thru 1</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">7</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Jon Rahm(W) +7
-Not started</td>
-      <td>Tiger Woods +7
-E thru 1</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -716,16 +700,32 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">8</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Tiger Woods +7
+E thru 1</td>
+      <td>Jon Rahm(W) +8
++1 thru 1</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">12</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td>Jon Rahm +7
-Not started</td>
+      <td>Jon Rahm +8
++1 thru 1</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -733,15 +733,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">12</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td>Jon Rahm(W) +7
-Not started</td>
+      <td>Jon Rahm(W) +8
++1 thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -749,34 +749,18 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">13</td>
       <td>Rory McIlroy(W) +1
 Not started</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td>Jon Rahm +7
-Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay +8
+      <td>Patrick Cantlay +8
 E thru 2</td>
+      <td class="greyout leftborder">Jon Rahm +8
++1 thru 1</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">13</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td>Will Zalatoris +2
-Not started</td>
-      <td>Viktor Hovland(W) +3
-Not started</td>
-      <td>Jon Rahm +7
-Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay +8
-E thru 2</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -790,9 +774,25 @@ Not started</td>
 Not started</td>
       <td>Daniel Berger +7
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm +7
-Not started</td>
+      <td class="greyout leftborder">Jon Rahm +8
++1 thru 1</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">14</td>
+      <td>Collin Morikawa +1
+Not started</td>
+      <td>Will Zalatoris +2
+Not started</td>
+      <td>Viktor Hovland(W) +3
+Not started</td>
+      <td>Patrick Cantlay +8
+E thru 2</td>
+      <td class="greyout leftborder">Jon Rahm +8
++1 thru 1</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -813,15 +813,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">15</td>
+      <td class="bigbold">16</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Viktor Hovland(W) +3
 Not started</td>
       <td>Patrick Reed +4
 Not started</td>
-      <td>Jon Rahm +7
-Not started</td>
+      <td>Jon Rahm +8
++1 thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -829,15 +829,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">15</td>
+      <td class="bigbold">16</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
-      <td>Jon Rahm +7
-Not started</td>
       <td>Patrick Cantlay(W) +8
 E thru 2</td>
+      <td>Jon Rahm +8
++1 thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -845,29 +845,29 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">16</td>
+      <td class="bigbold">17</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td>Daniel Berger +7
 Not started</td>
-      <td>Jon Rahm +7
-Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay +8
+      <td>Patrick Cantlay +8
 E thru 2</td>
+      <td class="greyout leftborder">Jon Rahm +8
++1 thru 1</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">16</td>
+      <td class="bigbold">17</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
-      <td>Jon Rahm(W) +7
-Not started</td>
+      <td>Jon Rahm(W) +8
++1 thru 1</td>
       <td>Patrick Cantlay +8
 E thru 2</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -877,15 +877,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">18</td>
+      <td class="bigbold">19</td>
       <td>Collin Morikawa(W) +1
 Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
-      <td>Jon Rahm +7
-Not started</td>
       <td>Patrick Cantlay +8
 E thru 2</td>
+      <td>Jon Rahm +8
++1 thru 1</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
       <td class="greyout">Jordan Spieth
@@ -893,13 +893,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">20</td>
+      <td class="bigbold">21</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Tony Finau +4
 Not started</td>
-      <td>Jon Rahm(W) +7
-Not started</td>
+      <td>Jon Rahm(W) +8
++1 thru 1</td>
       <td>Patrick Cantlay +8
 E thru 2</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -909,15 +909,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">21</td>
+      <td class="bigbold">22</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td>Jon Rahm +7
-Not started</td>
       <td>Patrick Cantlay +8
 E thru 2</td>
+      <td>Jon Rahm +8
++1 thru 1</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -1057,8 +1057,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Neville Spillman</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Scottie Scheffler</td>
-      <td class="greyout">Jon Rahm</td>
       <td class="greyout">Patrick Cantlay</td>
+      <td class="greyout">Jon Rahm</td>
       <td class="greyout">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout leftborder">Sam Burns
