--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:01:31 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:02:14 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -205,15 +205,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-3</td>
       <td>Scottie Scheffler(W) -9
 Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td>Jon Rahm +7
-Not started</td>
+      <td>Jon Rahm +8
++1 thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -237,15 +237,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">4</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Jon Rahm +7
-Not started</td>
+      <td>Jon Rahm +8
++1 thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay +8
 E thru 2</td>
       <td class="greyout">Tyrrell Hatton +9
@@ -308,24 +308,24 @@ Not started</td>
 Not started</td>
       <td>Robert MacIntyre +6
 Not started</td>
-      <td>Jon Rahm +7
+      <td>Daniel Berger +7
 Not started</td>
-      <td class="greyout leftborder">Daniel Berger +7
-Not started</td>
+      <td class="greyout leftborder">Jon Rahm +8
++1 thru 1</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">15</td>
+      <td class="bigbold">16</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Viktor Hovland(W) +3
 Not started</td>
       <td>Patrick Reed +4
 Not started</td>
-      <td>Jon Rahm +7
-Not started</td>
+      <td>Jon Rahm +8
++1 thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
@@ -333,13 +333,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">20</td>
+      <td class="bigbold">21</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Tony Finau +4
 Not started</td>
-      <td>Jon Rahm(W) +7
-Not started</td>
+      <td>Jon Rahm(W) +8
++1 thru 1</td>
       <td>Patrick Cantlay +8
 E thru 2</td>
       <td class="greyout leftborder">Jordan Spieth
@@ -349,15 +349,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">21</td>
+      <td class="bigbold">22</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td>Jon Rahm +7
-Not started</td>
       <td>Patrick Cantlay +8
 E thru 2</td>
+      <td>Jon Rahm +8
++1 thru 1</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
