--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:08:41 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:09:24 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,8 +150,8 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay +8
-E thru 2</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 3</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -264,8 +264,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Tony Finau +4
 Not started</td>
-      <td class="greyout">Patrick Cantlay +8
-E thru 2</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -278,8 +278,8 @@ Not started</td>
 Not started</td>
       <td>Dustin Johnson(W) +1
 Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay +8
-E thru 2</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 3</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -326,8 +326,8 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay +8
-E thru 2</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 3</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -374,8 +374,8 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay +8
-E thru 2</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 3</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -406,8 +406,8 @@ Not started</td>
 Not started</td>
       <td>Robert MacIntyre +6
 Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay +8
-E thru 2</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 3</td>
       <td class="greyout">Jon Rahm +8
 +1 thru 1</td>
     </tr>
@@ -429,15 +429,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-4</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Cameron Smith(W) -6
 Not started</td>
       <td>Matthew Fitzpatrick +4
 Not started</td>
-      <td>Patrick Cantlay +8
-E thru 2</td>
+      <td>Patrick Cantlay +7
+-1 thru 3</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -454,10 +454,10 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm(W) +8
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 3</td>
+      <td class="greyout">Jon Rahm(W) +8
 +1 thru 1</td>
-      <td class="greyout">Patrick Cantlay +8
-E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -493,13 +493,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
       <td>Scottie Scheffler(W) -9
 Not started</td>
       <td>Cameron Smith -6
 Not started</td>
-      <td>Patrick Cantlay +8
-E thru 2</td>
+      <td>Patrick Cantlay +7
+-1 thru 3</td>
       <td>Billy Horschel +9
 -1 thru 4</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -509,15 +509,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td>Patrick Cantlay(W) +8
-E thru 2</td>
+      <td>Patrick Cantlay(W) +7
+-1 thru 3</td>
       <td class="greyout leftborder">Jon Rahm +8
 +1 thru 1</td>
       <td class="greyout">Sam Burns
@@ -540,6 +540,22 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">2</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Justin Thomas(W) -1
+Not started</td>
+      <td>Will Zalatoris +2
+Not started</td>
+      <td>Patrick Cantlay +7
+-1 thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">3</td>
       <td>Cameron Smith -6
@@ -553,22 +569,6 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">3</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Will Zalatoris +2
-Not started</td>
-      <td>Patrick Cantlay +8
-E thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -716,6 +716,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">12</td>
+      <td>Rory McIlroy(W) +1
+Not started</td>
+      <td>Dustin Johnson +1
+Not started</td>
+      <td>Viktor Hovland +3
+Not started</td>
+      <td>Patrick Cantlay +7
+-1 thru 3</td>
+      <td class="greyout leftborder">Jon Rahm +8
++1 thru 1</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">12</td>
       <td>Justin Thomas(W) -1
@@ -748,19 +764,35 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">Walk 1</td>
       <td class="bigbold">13</td>
-      <td>Rory McIlroy(W) +1
+      <td>Collin Morikawa +1
+Not started</td>
+      <td>Will Zalatoris +2
+Not started</td>
+      <td>Viktor Hovland(W) +3
+Not started</td>
+      <td>Patrick Cantlay +7
+-1 thru 3</td>
+      <td class="greyout leftborder">Jon Rahm +8
++1 thru 1</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">13</td>
+      <td>Scottie Scheffler -9
 Not started</td>
       <td>Dustin Johnson +1
 Not started</td>
-      <td>Viktor Hovland +3
-Not started</td>
-      <td>Patrick Cantlay +8
-E thru 2</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+1 thru 1</td>
-      <td class="greyout">Jordan Spieth
+      <td>Patrick Cantlay +7
+-1 thru 3</td>
+      <td>Adam Scott +12
+E thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka(W)
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -780,34 +812,34 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">14</td>
-      <td>Collin Morikawa +1
+      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">15</td>
+      <td>Justin Thomas -1
 Not started</td>
-      <td>Will Zalatoris +2
+      <td>Rory McIlroy +1
 Not started</td>
-      <td>Viktor Hovland(W) +3
-Not started</td>
-      <td>Patrick Cantlay +8
-E thru 2</td>
-      <td class="greyout leftborder">Jon Rahm +8
+      <td>Patrick Cantlay(W) +7
+-1 thru 3</td>
+      <td>Jon Rahm +8
 +1 thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">14</td>
-      <td>Scottie Scheffler -9
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">16</td>
+      <td>Justin Thomas(W) -1
 Not started</td>
-      <td>Dustin Johnson +1
+      <td>Viktor Hovland +3
 Not started</td>
-      <td>Patrick Cantlay +8
-E thru 2</td>
-      <td>Adam Scott +12
-E thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka(W)
-Missed Cut</td>
+      <td>Daniel Berger +7
+Not started</td>
+      <td>Patrick Cantlay +7
+-1 thru 3</td>
+      <td class="greyout leftborder">Jon Rahm +8
++1 thru 1</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -828,48 +860,16 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">16</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Patrick Cantlay(W) +8
-E thru 2</td>
-      <td>Jon Rahm +8
-+1 thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">17</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Viktor Hovland +3
-Not started</td>
-      <td>Daniel Berger +7
-Not started</td>
-      <td>Patrick Cantlay +8
-E thru 2</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+1 thru 1</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">17</td>
+      <td class="bigbold">16</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
+      <td>Patrick Cantlay +7
+-1 thru 3</td>
       <td>Jon Rahm(W) +8
 +1 thru 1</td>
-      <td>Patrick Cantlay +8
-E thru 2</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -877,13 +877,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">19</td>
+      <td class="bigbold">18</td>
       <td>Collin Morikawa(W) +1
 Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
-      <td>Patrick Cantlay +8
-E thru 2</td>
+      <td>Patrick Cantlay +7
+-1 thru 3</td>
       <td>Jon Rahm +8
 +1 thru 1</td>
       <td class="greyout leftborder">Paul Casey
@@ -893,15 +893,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">21</td>
+      <td class="bigbold">20</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Tony Finau +4
 Not started</td>
+      <td>Patrick Cantlay +7
+-1 thru 3</td>
       <td>Jon Rahm(W) +8
 +1 thru 1</td>
-      <td>Patrick Cantlay +8
-E thru 2</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -909,13 +909,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">22</td>
+      <td class="bigbold">21</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td>Patrick Cantlay +8
-E thru 2</td>
+      <td>Patrick Cantlay +7
+-1 thru 3</td>
       <td>Jon Rahm +8
 +1 thru 1</td>
       <td class="greyout leftborder">Jordan Spieth(W)
