--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:10:50 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:11:33 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -279,7 +279,7 @@ Not started</td>
       <td>Tony Finau +4
 Not started</td>
       <td class="greyout leftborder">Daniel Berger +7
-Not started</td>
+E thru 1</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -309,7 +309,7 @@ Not started</td>
       <td>Robert MacIntyre +6
 Not started</td>
       <td>Daniel Berger +7
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jon Rahm +8
 +1 thru 1</td>
       <td class="greyout">Jordan Spieth
