--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:11:33 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:12:16 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -293,7 +293,7 @@ Not started</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Russell Henley +7
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele(W)
 Missed Cut</td>
       <td class="greyout">Louis Oosthuizen
