--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:18:00 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:18:43 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -313,7 +313,7 @@ Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
 Not started</td>
       <td class="greyout">Jon Rahm +8
-+1 thru 1</td>
++1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -343,7 +343,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td class="greyout leftborder">Jon Rahm(W) +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -409,7 +409,7 @@ Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 3</td>
       <td class="greyout">Jon Rahm +8
-+1 thru 1</td>
++1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
@@ -422,8 +422,8 @@ Not started</td>
 Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
-      <td class="greyout leftborder">Tiger Woods +7
-E thru 1</td>
+      <td class="greyout leftborder">Tiger Woods +6
+-1 thru 2</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -457,7 +457,7 @@ Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 3</td>
       <td class="greyout">Jon Rahm(W) +8
-+1 thru 1</td>
++1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -469,7 +469,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td>Jon Rahm +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -487,7 +487,7 @@ Not started</td>
       <td>Talor Gooch +3
 Not started</td>
       <td class="greyout leftborder">Jon Rahm(W) +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -519,7 +519,7 @@ Not started</td>
       <td>Patrick Cantlay(W) +7
 -1 thru 3</td>
       <td class="greyout leftborder">Jon Rahm +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -535,7 +535,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td class="greyout leftborder">Jon Rahm +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -565,7 +565,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td>Jon Rahm +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -584,8 +584,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
 Not started</td>
-      <td class="greyout">Tiger Woods(W) +7
-E thru 1</td>
+      <td class="greyout">Tiger Woods(W) +6
+-1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -597,7 +597,7 @@ Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td>Jon Rahm(W) +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -614,8 +614,8 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td class="greyout leftborder">Tiger Woods +7
-E thru 1</td>
+      <td class="greyout leftborder">Tiger Woods +6
+-1 thru 2</td>
       <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
@@ -661,10 +661,26 @@ Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td>Jon Rahm(W) +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout leftborder">Bubba Watson +8
 E thru 2</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">7</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Tiger Woods +6
+-1 thru 2</td>
+      <td>Jon Rahm(W) +8
++1 thru 2</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -677,7 +693,7 @@ Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Jon Rahm(W) +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -700,22 +716,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">8</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Tiger Woods +7
-E thru 1</td>
-      <td>Jon Rahm(W) +8
-+1 thru 1</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">12</td>
       <td>Rory McIlroy(W) +1
@@ -727,7 +727,7 @@ Not started</td>
       <td>Patrick Cantlay +7
 -1 thru 3</td>
       <td class="greyout leftborder">Jon Rahm +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -741,7 +741,7 @@ Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td>Jon Rahm +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -757,7 +757,7 @@ Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td>Jon Rahm(W) +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -775,7 +775,7 @@ Not started</td>
       <td>Patrick Cantlay +7
 -1 thru 3</td>
       <td class="greyout leftborder">Jon Rahm +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -807,7 +807,7 @@ Not started</td>
       <td>Daniel Berger +7
 E thru 1</td>
       <td class="greyout leftborder">Jon Rahm +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -821,7 +821,7 @@ Not started</td>
       <td>Patrick Cantlay(W) +7
 -1 thru 3</td>
       <td>Jon Rahm +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -839,7 +839,7 @@ E thru 1</td>
       <td>Patrick Cantlay +7
 -1 thru 3</td>
       <td class="greyout leftborder">Jon Rahm +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -853,7 +853,7 @@ Not started</td>
       <td>Patrick Reed +4
 Not started</td>
       <td>Jon Rahm +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -869,7 +869,7 @@ Not started</td>
       <td>Patrick Cantlay +7
 -1 thru 3</td>
       <td>Jon Rahm(W) +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -885,7 +885,7 @@ Not started</td>
       <td>Patrick Cantlay +7
 -1 thru 3</td>
       <td>Jon Rahm +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
       <td class="greyout">Jordan Spieth
@@ -901,7 +901,7 @@ Not started</td>
       <td>Patrick Cantlay +7
 -1 thru 3</td>
       <td>Jon Rahm(W) +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -917,7 +917,7 @@ Not started</td>
       <td>Patrick Cantlay +7
 -1 thru 3</td>
       <td>Jon Rahm +8
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
